# varnish-template

./: .gitignore  Makefile.am  README.rst  bootstrap  configure.ac  rename.sh  varnish-51-epel-7-x86_64.cfg  varnish-52-epel-7-x86_64.cfg  varnish-rpm-build.am  varnish-template.spec.in
m4/: vsc.m4
src/: Makefile.am  template.vsc  tpl.vsc  varnishtemplate.c  varnishtemplate.rst.in  varnishtemplate_options.h  vmod_template.c  vmod_template.vcc
src/foreign/: vut_options.h
src/tests/: template.vtc
vcl/varnish-template/: common.vcl
